<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_cpp_tutorials</name>
  <version>0.0.0</version>
  <description>ROS and C++ tutorials</description>

  <license>BSD</license>

  <maintainer email="ramilsafnab1996@gmail.com">Ramil Safin</maintainer>

  <url type="repository">https://github.com/ramsafin/ros-cpp-tutorials</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
